; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslmaputils.c_MpGetHidViaNamestring.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_aslmaputils.c_MpGetHidViaNamestring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACPI_NS_NO_UPSEARCH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [9 x i8] c"-No HID-\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @MpGetHidViaNamestring(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @ACPI_NS_NO_UPSEARCH, align 4
  %8 = call i32 @AcpiNsGetNode(i32* null, i8* %6, i32 %7, i32** %4)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i64 @ACPI_FAILURE(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  br label %16

13:                                               ; preds = %1
  %14 = load i32*, i32** %4, align 8
  %15 = call i8* @MpGetHidValue(i32* %14)
  store i8* %15, i8** %2, align 8
  br label %17

16:                                               ; preds = %12
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %17

17:                                               ; preds = %16, %13
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i32 @AcpiNsGetNode(i32*, i8*, i32, i32**) #1

declare dso_local i64 @ACPI_FAILURE(i32) #1

declare dso_local i8* @MpGetHidValue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
